# WhisperSTT

./: docs.txt  hello.py  index.html  pyproject.toml  requirements.txt  server.py  streamlit_app.py  stt.py  stt_microphone.py
.streamlit/: config.toml
openai/: index.html  openai_server.py
